--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,21 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
+}
+
+.item__task3 {
+  width: calc((100% - 30px * 3) / 3);
+  padding: 0;
+  margin: 0;
+}
+
+.item-img__task3 {
+  width: 100%;
+}
